added connection between index.php and database

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         <div class='creation-container'>
-            <div class='input-display'></div>
+            <div class='input-display'>
+                <div id='name-display'></div>
+                <div id='values-display'></div>
+            </div>
             <div class='input-fields'>
                 Nome do Triângulo: 
                 <input 
